# unmet-demand-intel

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: sample_posts.jsonl  source_refresh_jobs.example.json
deploy/systemd/: unmet-demand-dashboard.service  unmet-demand-refresh.service
scripts/: cluster_requests.py  extract_requests.py  import_exported_data.py  import_live_source.py  init_db.py  load_sample_data.py  review_cluster.py  run_pipeline.py  run_refresh_jobs.py  score_clusters.py  service_entrypoint.py
src/unmet_demand/: __init__.py  config.py  db.py  review.py  service.py
src/unmet_demand/cluster/: __init__.py  clusterer.py
src/unmet_demand/dashboard/: app.py
src/unmet_demand/embed/: __init__.py  embedder.py
src/unmet_demand/extract/: __init__.py  dedupe.py  extractor.py  local_llm.py  patterns.py
src/unmet_demand/ingest/: adapters.py  discourse.py  github.py  reddit.py  sample_loader.py  scheduler.py  sources.py  stackexchange.py
src/unmet_demand/score/: __init__.py  scorer.py
tests/: test_dedupe_review.py  test_extractor.py  test_ingest_sources.py  test_live_adapters.py  test_local_llm.py  test_near_dedupe.py  test_refresh_scheduler.py  test_scorer.py  test_service.py
